--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,5 +1,13 @@
 <%= form_for (@product) do |f| %>
 
+<% if @product.errors.any? %>
+<div id="error_explanation">
+	<h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved: </h2>
+	<ul>
+		<%= @product.errors.full_messages.each do |msg| %>
+		<li><%= msg %></li>
+<% end %>
+
 	<div class = "field">
 	  <%= f.label :name  %><br />
 	  <%= f.text_field :name%>
@@ -18,5 +26,5 @@
 
   <div class="actions"><%= f.submit %></div>
 <% end %>
-
+<% end %>
 
