Displaying price in dollars- conversion

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -8,6 +8,8 @@
 		<li><%= msg %></li>
 <% end %>
 
+<!-- The above code was added to display error messages along with pluralizing the number of errors displayed  -->
+
 	<div class = "field">
 	  <%= f.label :name  %><br />
 	  <%= f.text_field :name%>
