--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Products#index</h1>
+ <p>
+ <% @products.each do |product| %>
+ 		<h2> <%= link_to product.name, product %></h2>
+ 		<p>Product Description: <%= product.description %></p>
+ 		<p>Price: <%= product.formatted_price %></p>
+ 		<% end %>
+</p>
 <p>Find me in app/views/products/index.html.erb</p>
