--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<% if flash[:notice] %>
+	<p id="notice"><%= flash[:notice] %></p>
+	<% end %>
 
 <%= yield %>
 
