--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,6 @@
 <h1>Products#show HAHAHAHAH</h1>
 
 
-<% if current_user %>
 
 <h3>Reviews</h3>
 
@@ -21,31 +20,31 @@
 
 	<h4>New Review</h4>
 
-	<%= form_for([@product, @review]) do |f| %>
-	<% if @review.errors.any? %> 
-	<div id="error_explanation">
-		<h2> <%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved: </h2>
-		<ul>
-			<%= @review.errors.full_messages.each do |msg| %>
-			<li><%= msg %> </li>
-			<% end %>
-		</ul>
-	</div>
-	<% end %>
+	  <%= form_for([@product, @review]) do |f| %>
+    <% if @review.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
 
-	<div class="field">
-		<%= f.label :comment %><br/>
-		<%= f.text_area :comment %>
-	</div>
-	<div class="actions">
-		<%= f.submit %>
-	</div>
-	<% end %>
+        <ul>
+        <% @review.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
 
-	<% else %>
-	<p>Please <%= link_to "Login in", new_sessions_path %> to add a review. </p>
+    <div class="field">
+      <%= f.label :comment %><br />
+      <%= f.text_area :comment %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+  <% end %>
 
-
+<% else %>
+  <p>Please <%= link_to "log in", new_session_path %> to add a review.</p> 
 <% end %>
+
 
 <p>Find me in app/views/products/show.html.erb</p>
