--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,6 +12,11 @@
 			</ul>
 		 </div>
 		 <% end %>
+
+		<div class = "field">
+			<%= f.label :name %> <br/>
+			<%= f.text_field :name %>
+		</div> 
 		 
 		<div class = "field">
 		   <%= f.label :email  %><br/>
@@ -19,7 +24,7 @@
 		</div>
 		 
 	  <div class = "field">
-		 	  <%= f.label :password  %> <br/>
+		 	  <%= f.label :password %><br/>
 		 	  <%= f.password_field :password %>
 		</div>
 		 
