--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for (@product) do |f| %>
+<%= form_for(@product) do |f| %>
 
 <% if @product.errors.any? %>
 <div id="error_explanation">
@@ -26,7 +26,10 @@
 	</div>  
 
 
-  <div class="actions"><%= f.submit %></div>
+  <div class="actions">
+  	<%= f.submit %>
+  </div>
 <% end %>
 <% end %>
+
 
